--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.17.0",
     "eslint-plugin-lit": "^1.15.0",
     "globals": "^15.14.0",
     "lit-analyzer": "^2.0.3",
+    "postcss": "^8.4.49",
+    "postcss-custom-media": "^11.0.5",
+    "postcss-preset-env": "^10.1.3",
     "prettier": "^3.4.2",
     "ts-lit-plugin": "^2.0.2",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-lit-css": "^2.0.0"
   },
   "prettier": {
     "trailingComma": "es5",
